--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
                 <div class="card-body">
                     <h4 class="card-title">学霸</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">可爱小肥狗一只</p>
-                    <button>猫猫档案！</button>
+                    <p class="card-text">可爱小肥狗狗一只</p>
+                    <button>狗狗档案！</button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
             <div class="card" style="width: 2000rem;">
                 <div class="card-body">
-                    <h4 class="card-title">学霸</h4>
+                    <h4 class="card-title">渣男</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">可爱小肥狗一只</p>
-                    <button>猫猫档案！</button>
+                    <p class="card-text">忧郁男神狗狗一只</p>
+                    <button>狗狗档案！</button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
             <div class="card" style="width: 2000rem;">
-                <div class="card-body">
-                    <h4 class="card-title">学霸</h4>
+                <div class="card-body"》
+                    <h4 class="card-title">摆摆</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">可爱小肥狗一只</p>
-                    <button>猫猫档案！</button>
+                    <p class="card-text">乖乖可爱狗狗一枚</p>
+                    <button>狗狗档案！ </button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
