--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <h4 class="card-title">学霸</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">可爱小肥狗狗一枚</p>
+                    <p><a href="/">戳我了解更多哦</a></p>
+
                     <button>狗狗档案！</button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
