--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h4 class="card-title">学霸</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">可爱小肥狗狗一枚</p>
-                    <button>❀狗狗档案❀</button>
+                    <button>ฅ狗狗档案ฅ</button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
