--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h4 class="card-title">断掌</h4>
                     <h5 class="card-subtitle">橘白</h5>
                     <p class="card-text">小肥猫/p>
-                    <button><img src="depositphotos_321246426-stock-illustration-animal-paw-print-icon-dog.jpg" >❀狗狗档案❀</button>
+                    <button>档案❀</button>
                 </div>
             </div>
         </div>
