--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="card-body">
                     <h4 class="card-title">断掌</h4>
                     <h5 class="card-subtitle">橘白</h5>
-                    <p class="card-text">小肥猫/p>
+                    <p class="card-text">小肥猫</p>
                     <button> 🐈猫猫档案 🐈</button>
                 </div>
             </div>
