--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="sm-12 md-2 col">
         <nav>
-                    <ul>
+                    <ul style="text-align: center">
                         <h3><a href="index.html">湖经猫猫档案</a></h3>
                         <li><a href="#">猫猫</a></li>
                         <li><a href="#">狗狗</a></li>
