--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     </ul>
         </nav>
     </div>
+    <footer style="text-align: center">xmwifcjwicji</footer>
 </div>
 </body>
 </html>
