--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </ul>
         </nav>
     </div>
-    <footer style="text-align: center">xmwifcjwicji</footer>
 </div>
 </body>
+<footer style="text-align: center">本网战与湖经动物保护协会</footer>
 </html>
