--- a/index.html
+++ b/index.html
@@ -86,5 +86,5 @@
     </div>
 </div>
 </body>
-<footer style="text-align: center">本网战与湖经动物保护协会</footer>
+<footer style="text-align: center">本网站与湖经动物保护协会无关</footer>
 </html>
