--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <title>湖经猫猫档案</title>
 </head>
-<body  style="background-image: url('assets/1711624759891_waifu2x_art_noise2.png');background-repeat:no-repeat;background-size: 100%;">
+<body style="background-image: url('assets/1711624759891_waifu2x_art_noise2.png');background-repeat:no-repeat;background-size: 100%;">
 <div class="row">
     <div class="sm-12 md-10 col">
         <div class="row">
@@ -60,7 +60,9 @@
                     <h4 class="card-title">摆摆</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">温暖治愈狗狗一枚</p>
-                    <button><img src="depositphotos_321246426-stock-illustration-animal-paw-print-icon-dog.jpg" style="width: 20px;height: 24px;display: inline">❀狗狗档案❀</button>
+                    <button><img src="depositphotos_321246426-stock-illustration-animal-paw-print-icon-dog.jpg"
+                                 style="width: 20px;height: 24px;display: inline">❀狗狗档案❀
+                    </button>
                 </div>
                 <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
@@ -76,12 +78,12 @@
     </div>
     <div class="sm-12 md-2 col">
         <nav>
-                    <ul style="text-align: center">
-                        <h3><a href="index.html">湖经猫猫档案</a></h3>
-                        <li><a href="#">猫猫</a></li>
-                        <li><a href="#">狗狗</a></li>
-                        <li><a href="#">关于我们</a></li>
-                    </ul>
+            <ul style="text-align: center">
+                <h3><a href="index.html">湖经猫猫档案</a></h3>
+                <li><a href="#">猫猫</a></li>
+                <li><a href="#">狗狗</a></li>
+                <li><a href="#">关于我们</a></li>
+            </ul>
         </nav>
     </div>
 </div>
