--- a/pages/cats.html
+++ b/pages/cats.html
@@ -30,7 +30,7 @@
 
     <title>湖经猫猫档案</title>
 </head>
-<body style="background-image: url('assets/img/background.png');background-repeat:no-repeat;background-size: 100%;">
+<body style="background-image: url('../assets/img/pc-background.png');background-repeat:no-repeat;background-size: 100%;">
 <div class="row">
     <div class="sm-12 md-10 col">
         <div class="row">
