--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="assets/css/paper.min.css" rel="stylesheet"/>
+    <link href="assets/css/paper.css" rel="stylesheet"/>
     <style>html::-webkit-scrollbar {
         width: 10px;
     }
@@ -30,7 +30,7 @@
 
     <title>湖经猫猫档案</title>
 </head>
-<body style="background-image: url('assets/img/pc-background.png');background-repeat:no-repeat;background-size: 100%;">
+<body style="background-image: url('assets/img/pc-background.png');background-repeat:no-repeat;background-size: 100%;background-attachment: fixed">
 <div class="row">
     <div class="sm-12 md-10 col">
         <div class="row">
@@ -73,6 +73,33 @@
                     <p class="card-text">小肥猫</p>
                     <button> 🐈猫猫档案 🐈</button>
                 </div>
+            </div>
+            <div class="card" style="width: 2000rem;">
+                <div class="card-body">
+                    <h4 class="card-title">渣男</h4>
+                    <h5 class="card-subtitle">中华田园犬</h5>
+                    <p class="card-text">忧郁男神狗狗一枚</p>
+                    <button>🐕狗狗档案🐾</button>
+                </div>
+                <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
+            </div>
+            <div class="card" style="width: 2000rem;">
+                <div class="card-body">
+                    <h4 class="card-title">渣男</h4>
+                    <h5 class="card-subtitle">中华田园犬</h5>
+                    <p class="card-text">忧郁男神狗狗一枚</p>
+                    <button>🐕狗狗档案🐾</button>
+                </div>
+                <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
+            </div>
+            <div class="card" style="width: 2000rem;">
+                <div class="card-body">
+                    <h4 class="card-title">渣男</h4>
+                    <h5 class="card-subtitle">中华田园犬</h5>
+                    <p class="card-text">忧郁男神狗狗一枚</p>
+                    <button>🐕狗狗档案🐾</button>
+                </div>
+                <!--<img alt="Card example image" class="image-bottom" src="https://unsplash.it/550/250">-->
             </div>
         </div>
     </div>
