--- a/index.html
+++ b/index.html
@@ -4,33 +4,12 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="assets/css/paper.css" rel="stylesheet"/>
-    <style>html::-webkit-scrollbar {
-        width: 10px;
-    }
-
-    html::-webkit-scrollbar-track {
-        background: rgb(179, 177, 177);
-        border-radius: 10px;
-    }
-
-    html::-webkit-scrollbar-thumb {
-        background: rgb(136, 136, 136);
-        border-radius: 10px;
-    }
-
-    html::-webkit-scrollbar-thumb:hover {
-        background: rgb(100, 100, 100);
-        border-radius: 10px;
-    }
-
-    html::-webkit-scrollbar-thumb:active {
-        background: rgb(68, 68, 68);
-        border-radius: 10px;
-    }</style>
+    <link href="assets/css/main.css" rel="stylesheet"/>
+    <style></style>
 
     <title>湖经猫猫档案</title>
 </head>
-<body style="background-image: url('assets/img/pc-background.png');background-repeat:no-repeat;background-size: 100%;background-attachment: fixed">
+<body>
 <div class="row">
     <div class="sm-12 md-10 col">
         <div class="row">
