--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
         </div>
     </div>
-    <div class="sm-12 md-2 col">
-        <nav>
+    <div class="sm-12 md-2 col" >
+        <nav style="align-content: center">
             <ul style="text-align: center">
                 <h3><a href="index.html">湖经猫猫档案</a></h3>
                 <li><a href="#">猫猫</a></li>
