--- a/pages/cats.html
+++ b/pages/cats.html
@@ -33,7 +33,7 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <img class="float-left" src="https://picsum.photos/768" alt="Card example image"
+                    <img alt="Card example image" class="float-left" src="https://picsum.photos/768"
                          style="max-height: 200px; max-width: 200px;">
                     <h4 class="card-title" style="margin-top: 30px">断掌</h4>
                     <h5 class="card-subtitle">橘白</h5>
