--- a/pages/cats.html
+++ b/pages/cats.html
@@ -38,7 +38,7 @@
                     <h4 class="card-title" style="margin-top: 30px">断掌</h4>
                     <h5 class="card-subtitle">橘白</h5>
                     <p class="card-text">可爱小肥猫一枚</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/DuanZhang/DuanZhang.html">🐾猫猫档案🐾</a></button>
                 </div>
 
                 <script>
@@ -55,7 +55,7 @@
                     <h4 class="card-title">福特波</h4>
                     <h5 class="card-subtitle">奶牛</h5>
                     <p class="card-text">神经小猫一只</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/FuTeBo/FuTeBo.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                     <h4 class="card-title">梅狸猫</h4>
                     <h5 class="card-subtitle">狸花</h5>
                     <p class="card-text">高冷小胖猫一枚</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/MeiLiMao">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
                     <h4 class="card-title">怂怂</h4>
                     <h5 class="card-subtitle">橘白</h5>
                     <p class="card-text">怂怂的小肥猫一只</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/SongSong/SongSong.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                     <h4 class="card-title">铁蛋</h4>
                     <h5 class="card-subtitle">简州猫</h5>
                     <p class="card-text">贪吃超大肥猫一辆</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/TieDan/TieDan.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
                     <h4 class="card-title">大白</h4>
                     <h5 class="card-subtitle">白猫</h5>
                     <p class="card-text">霸道煤炭一堆</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/DaBai/DaBai.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -135,7 +135,7 @@
                     <h4 class="card-title">咪咪</h4>
                     <h5 class="card-subtitle">玳瑁</h5>
                     <p class="card-text">亲人小可爱一个</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/MiMi/MiMi.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -144,7 +144,7 @@
                     <h4 class="card-title">内卷</h4>
                     <h5 class="card-subtitle">黑猫</h5>
                     <p class="card-text">警惕小机灵鬼一个</p>
-                    <button>🐾猫猫档案🐾</button>
+                    <button><a href="cats/NeiJuan/NeiJuan.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
         </div>
