--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -33,12 +33,12 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <img alt="Card example image" class="float-left" src="https://picsum.photos/768"
+                    <img class="float-left" src="dogs/XueBa/XueBa.jpg"
                          style="max-height: 200px; max-width: 200px;">
                     <h4 class="card-title" style="margin-top: 30px">学霸</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">爱笑小肥狗一大只</p>
-                    <button>🐕狗狗档案🐕</button>
+                    <button><a href="dogs/XueBa/XueBa.html">🐕狗狗档案🐕</a></button>
                 </div>
             </div>
 
@@ -49,15 +49,6 @@
                 bar.attributes.setNamedItem(typ);
             </script>
 
-            <div class="card" style="width: 520rem;">
-                <div class="card-body">
-                    <h4 class="card-title">摆摆</h4>
-                    <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">瘦瘦的小天使</p>
-                    <button>🐕狗狗档案🐕</button>
-                </div>
-            </div>
-
             <script>
                 bar = document.getElementsByClassName("progress")[0].firstElementChild;
                 typ = document.createAttribute("class");
@@ -67,10 +58,12 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
+                    <img class="float-left" src="dogs/ZhaNan/ZhaNan.jpg"
+                         style="max-height: 200px; max-width: 200px;">
                     <h4 class="card-title">渣男</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">渣渣的老狗狗</p>
-                    <button>🐕狗狗档案🐕</button>
+                    <p class="card-text">渣渣的老狗狗一只</p>
+                    <button><a href="dogs/ZhaNan/ZhaNan.html">🐕狗狗档案🐕</a></button>
                 </div>
             </div>
 
@@ -80,15 +73,6 @@
                 typ.nodeValue = "bar w-65";
                 bar.attributes.setNamedItem(typ);
             </script>
-
-            <div class="card" style="width: 520rem;">
-                <div class="card-body">
-                    <h4 class="card-title">小黑</h4>
-                    <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">眼睛亮亮的小黑狗一只</p>
-                    <button>🐕狗狗档案🐕</button>
-                </div>
-            </div>
         </div>
     </div>
     <div class="sm-12 md-2 col">
