--- a/pages/cats.html
+++ b/pages/cats.html
@@ -33,7 +33,7 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <img alt="Card example image" class="float-left" src="https://picsum.photos/768"
+                    <img class="float-left" src="cats/DuanZhang/DuanZhang.jpg"
                          style="max-height: 200px; max-width: 200px;">
                     <h4 class="card-title" style="margin-top: 30px">断掌</h4>
                     <h5 class="card-subtitle">橘白</h5>
@@ -52,7 +52,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">福特波</h4>
+                    <img class="float-left" src="cats/FuTeBo/FuTeBo.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">福特波</h4>
                     <h5 class="card-subtitle">奶牛</h5>
                     <p class="card-text">神经小猫一只</p>
                     <button><a href="cats/FuTeBo/FuTeBo.html">🐾猫猫档案🐾</a></button>
@@ -68,10 +70,12 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">梅狸猫</h4>
+                    <img class="float-left" src="cats/MeiLiMao/MeiLiMao.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">梅狸猫</h4>
                     <h5 class="card-subtitle">狸花</h5>
                     <p class="card-text">高冷小胖猫一枚</p>
-                    <button><a href="cats/MeiLiMao">🐾猫猫档案🐾</a></button>
+                    <button><a href="cats/MeiLiMao/MeiLiMao.html">🐾猫猫档案🐾</a></button>
                 </div>
             </div>
 
@@ -84,7 +88,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">怂怂</h4>
+                    <img class="float-left" src="cats/SongSong/SongSong.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">怂怂</h4>
                     <h5 class="card-subtitle">橘白</h5>
                     <p class="card-text">怂怂的小肥猫一只</p>
                     <button><a href="cats/SongSong/SongSong.html">🐾猫猫档案🐾</a></button>
@@ -100,7 +106,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">铁蛋</h4>
+                    <img class="float-left" src="cats/TieDan/TieDan.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">铁蛋</h4>
                     <h5 class="card-subtitle">简州猫</h5>
                     <p class="card-text">贪吃超大肥猫一辆</p>
                     <button><a href="cats/TieDan/TieDan.html">🐾猫猫档案🐾</a></button>
@@ -116,7 +124,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">大白</h4>
+                    <img class="float-left" src="cats/DaBai/DaBai.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">大白</h4>
                     <h5 class="card-subtitle">白猫</h5>
                     <p class="card-text">霸道煤炭一堆</p>
                     <button><a href="cats/DaBai/DaBai.html">🐾猫猫档案🐾</a></button>
@@ -132,7 +142,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">咪咪</h4>
+                    <img class="float-left" src="cats/MiMi/MiMi.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">咪咪</h4>
                     <h5 class="card-subtitle">玳瑁</h5>
                     <p class="card-text">亲人小可爱一个</p>
                     <button><a href="cats/MiMi/MiMi.html">🐾猫猫档案🐾</a></button>
@@ -141,7 +153,9 @@
 
             <div class="card" style="width: 520rem;">
                 <div class="card-body">
-                    <h4 class="card-title">内卷</h4>
+                    <img class="float-left" src="cats/NeiJuan/NeiJuan.jpg"
+                         style="max-height: 200px; max-width: 200px;">
+                    <h4 class="card-title" style="margin-top: 30px">内卷</h4>
                     <h5 class="card-subtitle">黑猫</h5>
                     <p class="card-text">警惕小机灵鬼一个</p>
                     <button><a href="cats/NeiJuan/NeiJuan.html">🐾猫猫档案🐾</a></button>
@@ -198,5 +212,5 @@
     });
 </script>
 </body>
-<footer style="text-align: center">本站点目前与动物保护协会无任何形式的隶属或合作关系</footer>
+<footer style="text-align: center">本站点目前与湖经动物保护协会无任何形式的隶属或合作关系，仅供参赛之用</footer>
 </html>
