--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -60,7 +60,7 @@
                 <div class="card-body">
                     <img class="float-left" src="dogs/ZhaNan/ZhaNan.jpg"
                          style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title">渣男</h4>
+                    <h4 class="card-title" style="margin-top: 30px">渣男</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">渣渣的老狗狗一只</p>
                     <button><a href="dogs/ZhaNan/ZhaNan.html">🐕狗狗档案🐕</a></button>
@@ -125,5 +125,5 @@
 </script>
 
 </body>
-<footer style="text-align: center">本站点目前与动物保护协会无任何形式的隶属或合作关系</footer>
+<footer style="text-align: center">本站点目前与湖经动物保护协会无任何形式的隶属或合作关系，仅供参赛之用</footer>
 </html>
