--- a/pages/cats/DuanZhang/DuanZhang.html
+++ b/pages/cats/DuanZhang/DuanZhang.html
@@ -23,11 +23,25 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
-                    <img class="float-left" src="DuanZhang.jpg"
-                         style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">断掌</h4>
-                    <h5 class="card-subtitle">橘白</h5>
-                    <p class="card-text">可爱小肥猫一枚</p>
+                    <div class="paper">
+                        <img class="float-left" src="DuanZhang.jpg"
+                             style="max-height: 200px; max-width: 200px;">
+                        <h2 style="text-align: right;margin-top: 0;margin-bottom: 0;">猫猫档案</h2>
+                        <h4 class="card-title">断掌</h4>
+                        <h5 class="card-subtitle">橘白</h5>
+                        <p class="card-text">可爱小肥猫一枚</p>
+                        <p>
+                            <br>
+                            <br>
+                            <br>
+                            猫咪外号：掌掌，掌弟，断猫猫<br>
+                            猫咪性别：弟弟<br>
+                            猫咪性格：亲人，但是有时候也有点怕人<br>
+                            猫咪特点：前左爪是半掌，断掌这个名字也是由此而来，鼻尖上有一些小痣。<br>
+                            猫咪简介：有点懒，喜欢在暖和的地方睡大觉，喜欢吃东西，会跟人玩，可能会轻轻咬人但是有分寸。<br>
+                            猫咪趣事：断掌有一次盯着一只小麻雀看了很久，想要抓它，但是胖胖的掌掌忽视了自己的体重，跳起来成功把鸟吓跑了。
+                        </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
@@ -83,5 +97,5 @@
     });
 </script>
 </body>
-<footer style="text-align: center">本网站与湖经动物保护协会无关</footer>
+<footer style="text-align: center">本站点目前与湖经动物保护协会无任何形式的隶属或合作关系，仅供参赛之用</footer>
 </html>
