--- a/pages/cats/MiMi/MiMi.html
+++ b/pages/cats/MiMi/MiMi.html
@@ -83,5 +83,5 @@
     });
 </script>
 </body>
-<footer style="text-align: center">本网站与湖经动物保护协会无关</footer>
+<footer style="text-align: center">本站点目前与湖经动物保护协会无任何形式的隶属或合作关系，仅供参赛之用</footer>
 </html>
